--- a/Reports/UserManual/UserManual.tex
+++ b/Reports/UserManual/UserManual.tex
@@ -135,4 +135,15 @@ are shown in \ref{fig:metaworld}
     \label{fig:metaworld}
 \end{figure}
 
+\section*{Creating a new level and playing it}
+New levels are easily created in Tiled (see report for more details). For the board used with most testing,
+it is recommended that the level is 10 squares by 10 squares big. A level can be
+created using the tileset and entering tiles from the tileset into the level
+(a key for which tile is which is easily found on the repository). Then, the 
+level can be exported as an .xml file, and saved in the Resources/Levels folder.
+After saving it as an .xml, the level file name (without the .xml extension)
+has to be added to the index.txt. Adding it at the end will mean that the level
+is the last level, and adding it at the beginning will mean that the level is
+the first level.
+
 \end{document}          
