Update client build instructions

--- a/Reports/UserManual/UserManual.tex
+++ b/Reports/UserManual/UserManual.tex
@@ -46,7 +46,7 @@ Building it can be done by following these steps:
 
 \begin{itemize}
 	\item Go to \verb#File -> Build Settings#
-	\item Add the scene that needs to be built (either RemotePlayer.unity or LocalPlayer.unity)
+	\item Add the scenes that needs to be built (StartUpGUI, LocalPlayer, RemotePlayer).
 	\item Select the option "PC, Mac \& Linux Standalone" as the platform
 	\item (Optional) check "Development Build", and afterwards "Script Debugging" if you want to see debugging output from the scripts.
 	\item Click "Build", or, if you want to run it immediately, click "Build and Run"
